--- a/pom.xml
+++ b/pom.xml
@@ -30,4 +30,11 @@
 			<url>http://139.196.174.28:8081/nexus/content/repositories/releases</url>
 		</repository>
 	</distributionManagement>
+	<dependencies>
+		<dependency>
+			<groupId>com.zxhy.xjl.refactor</groupId>
+			<artifactId>xjl-refactor-controller</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+	</dependencies>
 </project>
